tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__Naphtha-AAAAAAAAAAAAAAAAAAACgQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 641,
  "prerequisites": [
    550,
    543,
    639
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can process Sulfuric Naphtha to fluid Naphtha which has a burn value of 220,000 EU in the Gas Turbine. Naphtha can be used to get Ethylene for Polyethylene, but it shares this use with Refinery Gas and Light Fuel, so decide for yourself which one you want to use.\n\nIf you choose to make High-Octane Gasoline in EV and onwards, it will need a lot of Naphtha. You can also make Polycaprolactam (Nylon), which doesn't have any useful purpose yet, but it might get some in the near future.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lNaphtha",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    550,
    543,
    639
  ],
  "rewards": [],
  "tasks": []
}
