tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__PersonalChunkloa-AAAAAAAAAAAAAAAAAAAF-A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1528,
  "prerequisites": [
    102
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Let's craft a personal chunkloader. It will load a 3x3 chunk area. You need ender fragments, ender pearls, or coins to power the chunkloader.\n\nPersonal anchors can be powered with ender fragments for 1h, ender pearls for 4 hours, and a varying amount depending on the coin used.\n\nPersonal Anchors§r are loaded once the owner visits, and stays loaded while the player is logged in.\n\nPassive Anchors§r are loaded once the owner visits, and stays loaded until the server resets.\n\nWorld Anchors§r are always loaded, even after a server reset.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lPersonal Chunkloading",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    102
  ],
  "rewards": [],
  "tasks": []
}
