tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__PortableMobSpawn-AAAAAAAAAAAAAAAAAAACcg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 626,
  "prerequisites": [
    98,
    916,
    102,
    495
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Do you want to move a spawner around and build a cool mob farm? That will be no problem if you get the diamond dolly. You can move 6 spawners before the durability runs out, which is probably more than you'll need right now.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lPortable Mob Spawners...? Cool!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    98,
    916,
    102,
    495
  ],
  "rewards": [],
  "tasks": []
}
