tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__PortableTanksToo-AAAAAAAAAAAAAAAAAAAF7w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1519,
  "prerequisites": [
    105
  ],
  "properties": {
    "auto_claim": false,
    "desc": "How about large steel fluid cells instead? Each holds 8000L, and they can stack to 64. Unfortunately, you have to load and unload them using a machine's interface - like ULV tanks for example - but hey, 512 buckets in a single slot is pretty good!\n\nYou cannot use these cells directly in the world, like BC tanks, or to dump the fluid on the ground.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lPortable Tanks Too Small?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    105
  ],
  "rewards": [],
  "tasks": []
}
