tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__PressAlltheThing-AAAAAAAAAAAAAAAAAAAAZA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 100,
  "prerequisites": [
    95
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With the basic forming press you can make different food items, glass arrows and some Project Red components.\n\nAt MV/HV stage you can make rotors, various AE components and make copies of your molds and extruder shapes.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lPress All the Things",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    95
  ],
  "rewards": [],
  "tasks": []
}
